--- a/templates/index.html
+++ b/templates/index.html
@@ -282,7 +282,7 @@
 <div class="container">
 
     <div class="logo">
-        <img src="/static/college_logo" alt="Logo">
+        <div style="font-size:48px;">🎓🤖</div>
     </div>
 
     <button type="button" class="theme-toggle" id="themeBtn">🌙 Dark</button>
